Fix EZP-21182: Implement the FormView view and add it the ContentEditView  !squash  Fixes according to review

--- a/Resources/public/css/contenteditformview.css
+++ b/Resources/public/css/contenteditformview.css
@@ -17,10 +17,4 @@
 
 .ez-view-contenteditformview .fieldgroup-fields {
     overflow: hidden;
-    transition: height 1s;
-    -webkit-transition: height 1s;
-}
-
-.ez-view-contenteditformview .is-collapsed .fieldgroup-fields {
-    height: 0px;
 }
